--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -5,37 +5,37 @@ import Layout from "../../layouts/Layout.astro";
 
 <Layout title="My story">
   <h1 class="text-4xl mb-4">My story</h1>
-  <p class="text-base">
-    I stumbled on web development by coincidence. I was chatting with a stranger
-    at a party, and they mentioned they were going through the
-    <a
-      class="text-blue-600 visited:text-purple-600"
-      href="https://www.freecodecamp.org/"
-      target="_blank">freecodecamp</a
-    > curriculum to make a career switch. At the time, I was working as a product
-    engineer, wearing many different hats. However, throughout the years I became
-    conflicted by the lack of technical challeges of my position. Inspired by the
-    story, I thought I'd give freecodecamp a try as well!
-    <br />
-    <br />
-    It was not exactly love at first sight, but by the time I made it to the <code
-      >React</code
-    > part of the curriculum, I was hooked! I'd always enjoyed software development,
-    however I was plagued by imposter syndrome. Making steady progress on the curriculum
-    started to give me confidence.
-    <br />
-    <br />
-    A few months down the road, I decided I would leave my career, and try my hand
-    at being a digital nomad. I did not plan to be earning money, but I felt getting
-    through the curriculum would provide a sense of progress and productivity. I
-    set sail for Hanoi, Vietnam. The year long backpacking and digital nomading become
-    a pivotal point in my life and career. I was able to get through critical parts
-    of the curriculum, build a few projects, and even land a contract position. My
-    initial projects' <code>Heroku</code> deploys are now dead, but here are a few
-    pictures:
-  </p>
-  <!-- TODO: make these components -->
   <div class="flex mb-4 flex-wrap my-6 justify-center">
+    <p class="text-base">
+      I stumbled on web development by coincidence. I was chatting with a
+      stranger at a party, and they mentioned they were going through the
+      <a
+        class="text-blue-600 visited:text-purple-600"
+        href="https://www.freecodecamp.org/"
+        target="_blank">freecodecamp</a
+      > curriculum to make a career switch. At the time, I was working as a product
+      engineer, wearing many different hats. However, throughout the years I became
+      conflicted by the lack of technical challeges of my position. Inspired by the
+      story, I thought I'd give freecodecamp a try as well!
+      <br />
+      <br />
+      It was not exactly love at first sight, but by the time I made it to the <code
+        >React</code
+      > part of the curriculum, I was hooked! I'd always enjoyed software development,
+      however I was plagued by imposter syndrome. Making steady progress on the curriculum
+      started to give me confidence.
+      <br />
+      <br />
+      A few months down the road, I decided I would leave my career, and try my hand
+      at being a digital nomad. I did not plan to be earning money, but I felt getting
+      through the curriculum would provide a sense of progress and productivity.
+      I set sail for Hanoi, Vietnam. The year long backpacking and digital nomading
+      become a pivotal point in my life and career. I was able to get through critical
+      parts of the curriculum, build a few projects, and even land a contract position.
+      My initial projects' <code>Heroku</code> deploys are now dead, but here are
+      a few pictures:
+    </p>
+    <!-- TODO: make these components -->
     <PhotoCard
       title="Freecodecamp meetup Hanoi"
       imgSrc="/work/story/hanoi/1.jpg"
