--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,5 +4,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Blog">
-  <UnderConstruction />
+  <h1 class="text-4xl mb-4">Blog</h1>
+  <div class="mb-4 justify-center">
+    <UnderConstruction />
+  </div>
 </Layout>
