--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -192,7 +192,7 @@ const progLangId = "languages";
     }
     <a class="tab" href={`#${progLangId}`}>{progLangHeader}</a>
   </div>
-  <div class="flex mb-4 flex-wrap">
+  <div class="flex mb-4 flex-wrap justify-center">
     {
       Object.keys(tileHeaders).map((tileType) => (
         <div class="flex flex-col p-2 my-6">
@@ -233,17 +233,19 @@ const progLangId = "languages";
   </div>
   {
     (
-      <div class="flex flex-col p-2 my-6">
-        <h1 id={progLangId} class="text-2xl my-6">
-          {progLangHeader}
-        </h1>
-        {import.meta.env.MODE === "development" ? (
-          <p class="text-9xl">
-            Guac will go here but lets not blow up my cheap serverless setup
-          </p>
-        ) : (
-          <CodingWrapped />
-        )}
+      <div class="flex mb-4 flex-wrap justify-center">
+        <div class="flex flex-col p-2 my-6">
+          <h1 id={progLangId} class="text-2xl my-6">
+            {progLangHeader}
+          </h1>
+          {import.meta.env.MODE === "development" ? (
+            <p class="text-9xl">
+              Guac will go here but lets not blow up my cheap serverless setup
+            </p>
+          ) : (
+            <CodingWrapped />
+          )}
+        </div>
       </div>
     )
   }
