--- a/src/components/CodingStats/CodingWrapped.astro
+++ b/src/components/CodingStats/CodingWrapped.astro
@@ -63,17 +63,16 @@ try {
 {
   dataSet && (
     <div class="flex flex-col p-4">
-      <h1 class="text-2xl my-4">I'm recently reading and writing in</h1>
       <div class="w-96 py-4 bg-base-400 m-4">
         <Coding client:visible dataSet={dataSet} topN={7} />
       </div>
-      <small>
+      <small class="text-center">
         Powered by{" "}
-        <a target="_blank" href="https://wakatime.com/">
+        <a class="badge badge-primary" target="_blank" href="https://wakatime.com/">
           Wakatime
         </a>
         and
-        <a href="https://github.com/mtanzim/guac" target="_blank">
+        <a class="badge badge-info" href="https://github.com/mtanzim/guac" target="_blank">
           Guac
         </a>
       </small>
