--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -1,41 +1,41 @@
 ---
-import Layout from "../../layouts/Layout.astro";
 import PhotoCard from "../../components/PhotoCard.astro";
+import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="My story">
-  <h1 class="text-2xl mb-4">My story</h1>
-  <p class="text-base">
-    I stumbled on web development by coincidence. I was chatting with a stranger
-    at a party, and they mentioned they were going through the
-    <a
-      class="text-blue-600 visited:text-purple-600"
-      href="https://www.freecodecamp.org/"
-      target="_blank">freecodecamp</a
-    > curriculum to make a career switch. At the time, I was working as a product
-    engineer, wearing many different hats. However, throughout the years I became
-    conflicted by the lack of technical challeges of my position. Inspired by the
-    story, I thought I'd give freecodecamp a try as well!
-    <br />
-    <br />
-    It was not exactly love at first sight, but by the time I made it to the <code
-      >React</code
-    > part of the curriculum, I was hooked! I'd always enjoyed software development,
-    however I was plagued by imposter syndrome. Making steady progress on the curriculum
-    started to give me confidence.
-    <br />
-    <br />
-    A few months down the road, I decided I would leave my career, and try my hand
-    at being a digital nomad. I did not plan to be earning money, but I felt getting
-    through the curriculum would provide a sense of progress and productivity. I
-    set sail for Hanoi, Vietnam. The year long backpacking and digital nomading become
-    a pivotal point in my life and career. I was able to get through critical parts
-    of the curriculum, build a few projects, and even land a contract position. My
-    initial projects' <code>Heroku</code> deploys are now dead, but here are a few
-    pictures:
-  </p>
-  <!-- TODO: make these components -->
-  <div class="flex mb-4 flex-wrap my-6">
+  <h1 class="text-4xl mb-4">My story</h1>
+  <div class="flex mb-4 flex-wrap my-6 justify-center">
+    <p class="text-base">
+      I stumbled on web development by coincidence. I was chatting with a
+      stranger at a party, and they mentioned they were going through the
+      <a
+        class="text-blue-600 visited:text-purple-600"
+        href="https://www.freecodecamp.org/"
+        target="_blank">freecodecamp</a
+      > curriculum to make a career switch. At the time, I was working as a product
+      engineer, wearing many different hats. However, throughout the years I became
+      conflicted by the lack of technical challeges of my position. Inspired by the
+      story, I thought I'd give freecodecamp a try as well!
+      <br />
+      <br />
+      It was not exactly love at first sight, but by the time I made it to the <code
+        >React</code
+      > part of the curriculum, I was hooked! I'd always enjoyed software development,
+      however I was plagued by imposter syndrome. Making steady progress on the curriculum
+      started to give me confidence.
+      <br />
+      <br />
+      A few months down the road, I decided I would leave my career, and try my hand
+      at being a digital nomad. I did not plan to be earning money, but I felt getting
+      through the curriculum would provide a sense of progress and productivity.
+      I set sail for Hanoi, Vietnam. The year long backpacking and digital nomading
+      become a pivotal point in my life and career. I was able to get through critical
+      parts of the curriculum, build a few projects, and even land a contract position.
+      My initial projects' <code>Heroku</code> deploys are now dead, but here are
+      a few pictures:
+    </p>
+    <!-- TODO: make these components -->
     <PhotoCard
       title="Freecodecamp meetup Hanoi"
       imgSrc="/work/story/hanoi/1.jpg"
@@ -91,43 +91,43 @@ import PhotoCard from "../../components/PhotoCard.astro";
       in my career. Similarly, my experience working in Berlin and the city's tech
       culture have made a big impact to my personal and professional life.
     </p>
-    <div class="flex mb-4 flex-wrap">
-      <PhotoCard
-        title="Brandenburg Tor at night"
-        imgSrc="/work/story/berlin/1.jpg"
-        imageAlt="brandenburg tor"
-      >
-        <p>The weird and fantastic city of Berlin.</p>
-      </PhotoCard>
-      <PhotoCard
-        title="My first office space in Mindspace, Berlin"
-        imgSrc="/work/story/berlin/2.jpg"
-        imageAlt="profile pic"
-      >
-        <p>
-          Jared Leto is not wrong, the coworking life is much better than
-          cubicles.
-        </p>
-      </PhotoCard>
-      <PhotoCard
-        title="Portfolio shoot with Moonfare"
-        imgSrc="/work/story/berlin/3.jpg"
-        imageAlt="profile pic"
-      >
-        <p>
-          I didn't make the <code>Meet the Team</code> page, but it'll be difficult to top this
-          LinkedIn profile photo.
-        </p>
-      </PhotoCard>
+    <PhotoCard
+      title="Brandenburg Tor at night"
+      imgSrc="/work/story/berlin/1.jpg"
+      imageAlt="brandenburg tor"
+    >
+      <p>The weird and fantastic city of Berlin.</p>
+    </PhotoCard>
+    <PhotoCard
+      title="My first office space in Mindspace, Berlin"
+      imgSrc="/work/story/berlin/2.jpg"
+      imageAlt="profile pic"
+    >
+      <p>
+        Jared Leto is not wrong, the coworking life is much better than
+        cubicles.
+      </p>
+    </PhotoCard>
+    <PhotoCard
+      title="Portfolio shoot with Moonfare"
+      imgSrc="/work/story/berlin/3.jpg"
+      imageAlt="profile pic"
+    >
+      <p>
+        I didn't make the <code>Meet the Team</code> page, but it'll be difficult
+        to top this LinkedIn profile photo.
+      </p>
+    </PhotoCard>
+    <div>
+      <p>
+        At the height of COVID the pandemic, I realized it was time to come back
+        home to Toronto, Canada. I am currently writing the next chapters here.
+      </p>
+      <img
+        class="object-contain my-6 shadow-xl rounded-2xl"
+        src="/work/story/toronto.jpg"
+        alt="Toronto"
+      />
     </div>
-    <p>
-      At the height of COVID the pandemic, I realized it was time to come back
-      home to Toronto, Canada. I am currently writing the next chapters here.
-    </p>
-    <img
-      class="object-contain my-6 shadow-xl rounded-2xl"
-      src="/work/story/toronto.jpg"
-      alt="Toronto"
-    />
   </div>
 </Layout>
