--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -13,14 +13,17 @@ const TopAlbumImgs: CarouselImage[] = [
   {
     url: "/albums/midnights.jpeg",
     title: "Taylor Swift - Midnights",
+    desc: "addictive to say the least; beautiful production and vocal performance",
   },
   {
     url: "/albums/call-me.jpeg",
     title: "Tyler the Creator - Call Me If You Get Lost",
+    desc: "Tyler is braggadocious without remorse with near perfect delivery",
   },
   {
     url: "/albums/asphalt-meadows.webp",
     title: "Death Cab for Cutie - Asphalt Meadows",
+    desc: "a wonderful comeback; haunting lyrics and signature catchy riffs",
   },
 ].map((item) => ({ ...item, alt: item.title }));
 ---
