--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -9,7 +9,7 @@ import Carousel from "../../components/Carousel";
 import UnderConstruction from "../../components/UnderConstruction.astro";
 
 // Copied, see https://stackoverflow.com/a/2450976/9641551
-function shuffle(array: Array<any>) {
+function shuffle<T>(array: T[]): T[] {
   let currentIndex = array.length,
     randomIndex;
 
@@ -76,8 +76,16 @@ const gameScreensSeed: CarouselImage[] = [
 ].map((item) => ({ ...item, alt: item.title }));
 
 // TODO: move these to a dynamic location/api
-const topAlbumImgs = shuffle(topAlbumSeed.slice()).slice(0, 3);
-const gameScreens = shuffle(gameScreensSeed.slice()).slice(0, 3);
+const len = 3;
+const topAlbumImgs = shuffle<CarouselImage>(topAlbumSeed.slice()).slice(0, len);
+const gameScreens = shuffle<CarouselImage>(gameScreensSeed.slice()).slice(
+  0,
+  len
+);
+
+const gameTitleSet = new Set<string>();
+gameScreens.forEach((g) => gameTitleSet.add(g.title));
+const gameTitles = Array.from(gameTitleSet).join(", ");
 ---
 
 <Layout title="Play">
@@ -123,11 +131,23 @@ const gameScreens = shuffle(gameScreensSeed.slice()).slice(0, 3);
         I've grown up with video games! The Switch has been the perfect device
         in jumping in here and there to satisfy the gaming itch with a busy
         life. Here are a few top class experiences that have kept me thrilled in
-        the last couple years, with screenshots from my Switch. Sorry for the
-        spoilers &#x1F61B
+        the last couple years, with screenshots from my Switch. Click on the
+        disclaimer for the screenshots.
       </p>
-      <div class="my-6 h-1/2 max-w-full">
-        <Carousel images={gameScreens} />
+      <div
+        tabindex="0"
+        class="collapse collapse-plus border border-base-300 bg-base-200"
+      >
+        <input type="checkbox" />
+
+        <div class="collapse-title text-xl font-medium">
+          I'm okay with spoilers for {gameTitles}
+        </div>
+        <div class="collapse-content">
+          <div class="my-6 h-1/2 max-w-full">
+            <Carousel images={gameScreens} />
+          </div>
+        </div>
       </div>
     </p>
   </div>
