--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -38,7 +38,7 @@ const topAlbumSeed: CarouselImage[] = [
   {
     url: "/albums/call-me.jpeg",
     title: "Tyler the Creator - Call Me If You Get Lost",
-    desc: "Tyler is braggadocious without remorse with near perfect delivery",
+    desc: "Tyler is braggadocious without remorse, but with near perfect delivery",
   },
   {
     url: "/albums/asphalt-meadows.webp",
