--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -2,7 +2,7 @@
 import Genres from "../../components/MusicGenres/Genres.svelte";
 import Layout from "../../layouts/Layout.astro";
 // TODO: move this to a dynamic location/api
-import json from "./spotify-artists.json";
+import json from "../../data/spotify-artists.json";
 import type { SpotifyArtists } from "../../types/spotify-artists";
 import type { CarouselImage } from "../../components/Carousel";
 import Carousel from "../../components/Carousel";
