--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -1,6 +1,43 @@
 ---
 import PhotoCard from "../../components/PhotoCard.astro";
 import Layout from "../../layouts/Layout.astro";
+import Carousel, { CarouselImage } from "../../components/Carousel";
+
+const asiaImages: CarouselImage[] = [
+  {
+    url: "/work/story/hanoi/1.jpg",
+    title: "Freecodecamp meetup Hanoi",
+    desc: "Google translate is great at translating documentation! I had worked on a blog project with these guys, and it helped me realize how little React and Javascript I knew at the time.",
+  },
+  {
+    url: "/work/story/hanoi/2.jpg",
+    title: `Remote "Work" from Pai`,
+    desc: "I was probably building my very first full stack SPA: a recipe app. The Roost stand and the Dell XPS took me far.",
+  },
+  {
+    url: "/work/story/hanoi/3.jpg",
+    title: `Dinner with the Relotalent team and friends`,
+    desc: "I really have to thank the Relotalent team for giving me a shot. All I had to do was keenly listen to the issues of Italian politics. Thankfully my Python and SQL skills from a past life came clutch.",
+  },
+].map((img) => ({ ...img, alt: img.title }));
+
+const berlinImages: CarouselImage[] = [
+  {
+    url: "/work/story/berlin/3.jpg",
+    title: "Portfolio shoot with Moonfare",
+    desc: `I didn't make the "Meet the Team" page, but it'll be difficult to top this LinkedIn profile photo.`,
+  },
+  {
+    url: "/work/story/berlin/1.jpg",
+    title: "Brandenburg Tor at night",
+    desc: "The weird and fantastic city of Berlin.",
+  },
+  {
+    url: "/work/story/berlin/2.jpg",
+    title: "My first office space in Mindspace, Berlin",
+    desc: "Jared Leto is not wrong, the coworking life is much better than cubicles.",
+  },
+].map((img) => ({ ...img, alt: img.title }));
 ---
 
 <Layout title="My story">
@@ -36,38 +73,11 @@ import Layout from "../../layouts/Layout.astro";
       a few pictures:
     </p>
     <!-- TODO: make these components -->
-    <PhotoCard
-      title="Freecodecamp meetup Hanoi"
-      imgSrc="/work/story/hanoi/1.jpg"
-      imageAlt="fcc hanoi"
-    >
-      <p>
-        Google translate is great at translating documentation! I had worked on
-        a blog project with these guys, and it helped me realize how little
-        React and Javascript I knew at the time.
-      </p>
-    </PhotoCard>
-    <PhotoCard
-      title='Remote "Work" from Pai'
-      imgSrc="/work/story/hanoi/2.jpg"
-      imageAlt="pai"
-    >
-      <p>
-        I was probably building my very first full stack SPA: a recipe app. The
-        roost stand and the Dell XPS took me far.
-      </p>
-    </PhotoCard>
-    <PhotoCard
-      title="Dinner with the Relotalent team and friends"
-      imgSrc="/work/story/hanoi/3.jpg"
-      imageAlt="hanoi dinner"
-    >
-      <p>
-        I really have to thank the Relotalent team for giving me a shot. All I
-        had to do was keenly listen to the issues of Italian politics.
-        Thankfully my Python and SQL skills from a past life came clutch.
-      </p>
-    </PhotoCard>
+
+    <div class="my-8">
+      <Carousel customImgClasses="h-96 object-contain" images={asiaImages} />
+    </div>
+
     <p>
       After about a year in Asia, I decided I'd move to Berlin. This was the
       first time I realized how difficult
@@ -91,43 +101,22 @@ import Layout from "../../layouts/Layout.astro";
       in my career. Similarly, my experience working in Berlin and the city's tech
       culture have made a big impact to my personal and professional life.
     </p>
-    <PhotoCard
-      title="Brandenburg Tor at night"
-      imgSrc="/work/story/berlin/1.jpg"
-      imageAlt="brandenburg tor"
-    >
-      <p>The weird and fantastic city of Berlin.</p>
-    </PhotoCard>
-    <PhotoCard
-      title="My first office space in Mindspace, Berlin"
-      imgSrc="/work/story/berlin/2.jpg"
-      imageAlt="profile pic"
-    >
-      <p>
-        Jared Leto is not wrong, the coworking life is much better than
-        cubicles.
-      </p>
-    </PhotoCard>
-    <PhotoCard
-      title="Portfolio shoot with Moonfare"
-      imgSrc="/work/story/berlin/3.jpg"
-      imageAlt="profile pic"
-    >
-      <p>
-        I didn't make the <code>Meet the Team</code> page, but it'll be difficult
-        to top this LinkedIn profile photo.
-      </p>
-    </PhotoCard>
-    <div>
-      <p>
-        At the height of COVID the pandemic, I realized it was time to come back
-        home to Toronto, Canada. I am currently writing the next chapters here.
-      </p>
-      <img
-        class="object-contain my-6 shadow-xl rounded-2xl"
-        src="/work/story/toronto.jpg"
-        alt="Toronto"
+    <div class="my-8">
+      <Carousel
+        customImgClasses="h-96 object-contain p-2"
+        images={berlinImages}
       />
     </div>
+  </div>
+  <div>
+    <p>
+      At the height of COVID the pandemic, I realized it was time to come back
+      home to Toronto, Canada. I am currently writing the next chapters here.
+    </p>
+    <img
+      class="object-contain my-6 shadow-xl rounded-2xl"
+      src="/work/story/toronto.jpg"
+      alt="Toronto"
+    />
   </div>
 </Layout>
