--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -105,7 +105,7 @@ const gameTitles = Array.from(gameTitleSet).join(", ");
         of CDs paired with a good system is hard to match. Here are a few albums
         I currently have on repeat:
       </p>
-      <div class="my-6 h-1/2 max-w-full">
+      <div class="my-6 h-1/2 max-w-full shadow-xl rounded-2xl bg-base-200 p-8">
         <Carousel images={topAlbumImgs} />
       </div>
       <p>
@@ -114,7 +114,7 @@ const gameTitles = Array.from(gameTitleSet).join(", ");
         following is a glimpse of my affinity towards musical genres from the
         last few years:
       </p>
-      <div class="my-6 h-1/2 max-w-full">
+      <div class="my-6 h-1/2 max-w-full shadow-xl rounded-2xl bg-base-200 p-8">
         <Genres data={json as SpotifyArtists} client:only />
       </div>
 
@@ -136,7 +136,7 @@ const gameTitles = Array.from(gameTitleSet).join(", ");
       </p>
       <div
         tabindex="0"
-        class="collapse collapse-plus border border-base-300 bg-base-200"
+        class="collapse collapse-plus my-6 h-1/2 max-w-full shadow-xl rounded-2xl bg-base-200 p-8"
       >
         <input type="checkbox" />
 
