--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -75,7 +75,7 @@ const berlinImages: CarouselImage[] = [
 
     <div class="my-6 shadow-xl rounded-2xl bg-base-200 p-8">
       <Carousel
-        customImgClasses="h-96 w-100 object-contain"
+        customImgClasses="h-96 w-100 object-contain mx-auto p-2"
         images={asiaImages}
       />
     </div>
@@ -105,7 +105,7 @@ const berlinImages: CarouselImage[] = [
     </p>
     <div class="my-6 shadow-xl rounded-2xl bg-base-200 p-8">
       <Carousel
-        customImgClasses="h-96 w-100 object-contain"
+        customImgClasses="h-96 w-100 object-contain mx-auto p-2"
         images={berlinImages}
       />
     </div>
