--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,9 +3,10 @@ import Footer from "../components/Footer.astro";
 import Navigation from "../components/Navigation.astro";
 export interface Props {
   title: string;
+  hideHeader?: boolean;
 }
 
-const { title } = Astro.props;
+const { title, hideHeader } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -23,7 +24,10 @@ const { title } = Astro.props;
   <body>
     <Navigation />
     <div class="container mx-auto px-4 mb-24">
-      <slot />
+      {!hideHeader && <h1 class="text-4xl mb-4">{title}</h1>}
+      <div class="mb-4 justify-center">
+        <slot />
+      </div>
     </div>
     <Footer />
   </body>
