--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Home">
+<Layout title="Home" hideHeader>
   <div class="hero g-base">
     <div class="hero-content flex-col lg:flex-row">
       <div>
