--- a/src/components/CodingStats/CodingWrapped.astro
+++ b/src/components/CodingStats/CodingWrapped.astro
@@ -62,11 +62,11 @@ try {
 
 {
   dataSet && (
-    <div class="flex flex-col p-4">
-      <div class="w-96 py-4 bg-base-400 m-4">
+    <div class="text-center">
+      <div class="md:w-96 py-4 bg-base-400 m-4">
         <Coding client:visible dataSet={dataSet} topN={7} />
       </div>
-      <small class="text-center">
+      <small >
         Powered by{" "}
         <a class="badge badge-primary" target="_blank" href="https://wakatime.com/">
           Wakatime
