--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -21,7 +21,10 @@ const pages = [
 
 <div class="flex flex-wrap navbar bg-base-100 mb-8">
   <div class="flex-1">
-    <a href="/" class="btn btn-ghost normal-case text-xl">Tanzim Mokammel</a>
+    <a href="/" class="btn btn-ghost normal-case text-xl">
+      <img src="/favicon-32x32.png" alt="logo" />
+      <p class="mx-2">Tanzim Mokammel</p>
+    </a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1">
