--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Layout from "../layouts/Layout.astro";
         </p>
       </div>
       <div class="divider lg:divider-horizontal"></div>
-      <img src="/tanzim.jpg" class="max-w-sm rounded-lg shadow-2xl" />
+      <img src="/tanzim.jpg" class="max-w-xs rounded-lg shadow-2xl" />
     </div>
   </div>
 </Layout>
